kernels/channel/tests/should_fail/002_just_one_value.js
module.exports = {
    state: {
        data: null
    },
    fn: ($) => {
        // nothing to do
    },
    _: {
        fn: [],
        subs: [],
        deps: {}, // no dependencies tracked
        cache: { data: 10 },
        fatal: {}
    },
    should_fail: true
}